# pinecil_rust_hello_world

./: Cargo.toml  flake.nix  shell.nix
.cargo/: config
src/: main.rs
