[package]
name = "hello_flash_pinecil"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hello_flash_pinecil" # "{{project-name}}" -> "app"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-hal = "0.2.7"
gd32vf103-pac = "0.4.0"
gd32vf103xx-hal = "0.5.0"
panic-halt = "0.2.0"
riscv-rt = "0.9.0"
ssd1306 = "0.7.1"

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1 # less parallel codegen units for better optimization with the cost of longer compile times
# debug = true # debuginfo shouldn't affect size on flash/rom: https://docs.rust-embedded.org/book/unsorted/speed-vs-size.html
strip = true # strip debug symbols
lto = true
opt-level = "s" # optimize for size
# opt-level = "z" # optimize for size with even higher performance cost
